mejoras en cards

--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -21,3 +21,10 @@
 .border-radius{
     border-radius: 30px;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+  }
